增加音乐播放器。

--- a/src/web/program.html
+++ b/src/web/program.html
@@ -302,7 +302,7 @@
             <div class="placeholder">拖动左侧积木块到这里开始编程</div>
         </div>
         <div class="program-controls">
-            <button onclick="location.href='index.html'" class="control-button back-button">返回控制面板</button>
+            <button onclick="location.href='/'" class="control-button back-button">返回控制面板</button>
             <button onclick="startProgram()" class="control-button start-button">开始执行</button>
             <button onclick="clearProgram()" class="control-button clear-button">清除</button>
         </div>
